--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(announce_start_of_stack)
 export(announce_total_time)
 export(bgv_lab_prep_count_data_for_deseq2)
 export(bgv_lab_prep_count_data_for_gene_signature)
+export(calc_IMPRES)
 export(calc_fdr)
 export(calculate_gene_signatures)
 export(chao1)
