for real added the checkmate pkg to import in NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,5 +57,6 @@ export(view_boxplot)
 export(view_clustered_myHeatmap)
 export(view_volcano_plot)
 export(write_metadata)
+import(checkmate)
 import(data.table)
 import(magrittr)
