Working on SAE's calc_impres.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,14 @@ export(announce_start_of_stack)
 export(announce_total_time)
 export(bgv_lab_prep_count_data_for_deseq2)
 export(bgv_lab_prep_count_data_for_gene_signature)
-export(calc_IMPRES)
 export(calc_fdr)
+export(calc_impres)
 export(calculate_gene_signatures)
 export(chao1)
 export(convert_na_to_zeroes)
 export(convert_piped_col_names_to_single_names)
 export(dXX_index)
+export(default_ckpt_pairs)
 export(drop_low_columns)
 export(evenness)
 export(format_gene_set_name)
