--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,10 @@ export(calc_fdr)
 export(calc_impres)
 export(calculate_gene_signatures)
 export(chao1)
+export(convert_gmt_file)
 export(convert_na_to_zeroes)
 export(convert_piped_col_names_to_single_names)
+export(create_gene_lookup)
 export(dXX_index)
 export(default_ckpt_pairs)
 export(drop_low_columns)
@@ -60,4 +62,5 @@ export(view_volcano_plot)
 export(write_metadata)
 import(checkmate)
 import(data.table)
+import(housekeeping)
 import(magrittr)
