Added data navigation to get_gene_set_hgnc_human_c2cp_path.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(get_gene_set_entrez_human_c2_path)
 export(get_gene_set_entrez_human_cta_path)
 export(get_gene_set_entrez_human_kegg_path)
 export(get_gene_set_hgnc_human_bgvlab_path)
+export(get_gene_set_hgnc_human_c2cp_path)
 export(get_gene_set_hgnc_human_cta_path)
 export(get_gene_set_hgnc_human_kegg_path)
 export(get_gene_sigs_clustered_by_category)
