--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: binfotron
-Version: 0.3-20
+Version: 0.4-00
 Title: Binfotron Bioinformatics Analysis Tools Suite
 Description: The purpose of this package is to perform upper level analysis of
     bioinformatic data.
@@ -13,8 +13,7 @@ Imports:
     ggplot2,
     data.table,
     checkmate,
-    parallel,
-    housekeeping
+    parallel
 Suggests:
     org.Hs.eg.db,
     annotate
