Updated human, hgnc gene signatures for bgvlab and cta to map genes more effectively.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(dXX_index)
 export(default_ckpt_pairs)
 export(drop_low_columns)
 export(evenness)
+export(extract_mixcr_analyze_shotgun_reports)
 export(format_gene_set_name)
 export(get_biomart_hsa_ucsc_path)
 export(get_corrected_entropy_rdata_2_4096_path)
