Dropped model_ from function names. Set up pairwise comparisons for DeSeq2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(convert_piped_col_names_to_single_names)
 export(create_gene_lookup)
 export(dXX_index)
 export(default_ckpt_pairs)
+export(differential_expression)
 export(drop_low_columns)
 export(evenness)
 export(extract_mixcr_analyze_shotgun_reports)
@@ -46,13 +47,12 @@ export(inv_simpson)
 export(is_not_null)
 export(log_transform_plus)
 export(make_intro_text)
-export(model_differential_expression)
-export(model_regression)
 export(normalize_rows_by_quartile)
 export(operatable_columns)
 export(predict_true_entropy_from_counts)
 export(predict_true_entropy_from_diversity)
 export(pvalue_stars)
+export(regression)
 export(require_data_in_samples)
 export(round_data)
 export(scale_columns)
