Added several functions to general_functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(add_comments)
 export(announce_end_of_stack)
 export(announce_start_of_stack)
 export(announce_total_time)
+export(balanced_folds)
 export(bgv_lab_prep_count_data_for_deseq2)
 export(bgv_lab_prep_count_data_for_gene_signature)
 export(calc_expression_metrics)
@@ -40,14 +41,17 @@ export(get_gene_set_hgnc_human_cta_path)
 export(get_gene_set_hgnc_human_kegg_path)
 export(get_gene_sigs_clustered_by_category)
 export(get_ipres_gene_sigs)
+export(get_rho)
 export(gg_color_hue)
 export(has_sufficient_abundance_for_entropy)
 export(immune_gene_set_groupings)
 export(import_gmt_as_list)
+export(import_model_data)
 export(inv_simpson)
 export(is_not_null)
 export(log_transform_plus)
 export(make_intro_text)
+export(minimal_decimal_places_ordered)
 export(normalize_rows_by_quartile)
 export(operatable_columns)
 export(predict_true_entropy_from_counts)
@@ -60,10 +64,12 @@ export(scale_columns)
 export(screen_counts)
 export(shannon_entropy)
 export(specify_decimal)
+export(t_test_ci)
 export(view_boxplot)
 export(view_clustered_myHeatmap)
 export(view_volcano_plot)
 export(write_metadata)
+export(z_test_ci)
 import(checkmate)
 import(data.table)
 import(magrittr)
