Readded breakdown of import_model_data into serial_import and get_features_from_ranks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(get_corrected_entropy_rdata_ab1025_65K_ent1_8_path)
 export(get_corrected_entropy_rdata_ab8_1024_ent1_8_path)
 export(get_default_sample_key)
 export(get_features_from_gmt_file)
+export(get_features_from_ranks)
 export(get_gene_set_entrez_human_bgvlab_path)
 export(get_gene_set_entrez_human_c2_path)
 export(get_gene_set_entrez_human_cta_path)
@@ -62,6 +63,7 @@ export(require_data_in_samples)
 export(round_data)
 export(scale_columns)
 export(screen_counts)
+export(serial_import)
 export(shannon_entropy)
 export(specify_decimal)
 export(t_test_ci)
