Moved find_central_clone.R over from Area51

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(calc_fdr)
 export(calc_impres)
 export(calculate_gene_signatures)
 export(chao1)
+export(cluster_group_plot)
+export(collapse_identical_clusters)
 export(convert_gmt_file)
 export(convert_na_to_zeroes)
 export(convert_piped_col_names_to_single_names)
@@ -23,7 +25,9 @@ export(differential_expression)
 export(drop_low_columns)
 export(evenness)
 export(extract_mixcr_analyze_shotgun_reports)
+export(find_central_elements_by_cluster)
 export(format_gene_set_name)
+export(generate_kmeans_cluster_list)
 export(get_biomart_hsa_ucsc_path)
 export(get_corrected_entropy_rdata_2_4096_path)
 export(get_corrected_entropy_rdata_4097_65536_path)
@@ -44,19 +48,23 @@ export(get_gene_sigs_clustered_by_category)
 export(get_ipres_gene_sigs)
 export(get_rho)
 export(gg_color_hue)
+export(group_clusters_by_size)
 export(has_sufficient_abundance_for_entropy)
 export(immune_gene_set_groupings)
 export(import_gmt_as_list)
 export(import_model_data)
 export(inv_simpson)
 export(is_not_null)
+export(isolate_central_cluster_elements)
 export(log_transform_plus)
 export(make_intro_text)
 export(minimal_decimal_places_ordered)
 export(normalize_rows_by_quartile)
 export(operatable_columns)
+export(pca_variance_plot)
 export(predict_true_entropy_from_counts)
 export(predict_true_entropy_from_diversity)
+export(print_cluster_counts)
 export(pvalue_stars)
 export(regression)
 export(require_data_in_samples)
