Added clinical_vars to import_model_data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,9 +62,13 @@ export(minimal_decimal_places_ordered)
 export(normalize_rows_by_quartile)
 export(operatable_columns)
 export(pca_variance_plot)
+export(plot_cumulative_features)
+export(plot_error_volcano)
+export(plot_waterfall)
 export(predict_true_entropy_from_counts)
 export(predict_true_entropy_from_diversity)
 export(print_cluster_counts)
+export(pvalue_nums)
 export(pvalue_stars)
 export(regression)
 export(require_data_in_samples)
