Added encode_special_char, decode_special_char, and decode_columns.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,9 +20,12 @@ export(convert_na_to_zeroes)
 export(convert_piped_col_names_to_single_names)
 export(create_gene_lookup)
 export(dXX_index)
+export(decode_columns)
+export(decode_special_char)
 export(default_ckpt_pairs)
 export(differential_expression)
 export(drop_low_columns)
+export(encode_special_char)
 export(evenness)
 export(extract_mixcr_analyze_shotgun_reports)
 export(find_central_elements_by_cluster)
