--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ export(convert_na_to_zeroes)
 export(convert_piped_col_names_to_single_names)
 export(create_gene_lookup)
 export(dXX_index)
-export(decode_columns)
+export(decode_clms)
 export(decode_special_char)
 export(default_ckpt_pairs)
 export(differential_expression)
