Got decode_special_char to skip string with out special characters. import_model_data now doesn't fail if asked for more features than possible. Added find_low_variance_clms and find_similar_clms.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(encode_special_char)
 export(evenness)
 export(extract_mixcr_analyze_shotgun_reports)
 export(find_central_elements_by_cluster)
+export(find_low_variance_clms)
+export(find_similar_clms)
 export(format_gene_set_name)
 export(generate_kmeans_cluster_list)
 export(get_biomart_hsa_ucsc_path)
