Added soft scale function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ export(scale_columns)
 export(screen_counts)
 export(serial_import)
 export(shannon_entropy)
+export(soft_scale)
 export(specify_decimal)
 export(t_test_ci)
 export(view_boxplot)
